--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     
     <header>
         <nav id="top-menu"></nav>
+
+        <nav id="sub-menu"></nav>
+
       </header>
       <main></main>
 
